<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shortyz</string>
    <string name="puzzle_select">Select a puzzle:</string>
    <string name="title_activity_games_sign_in">Sign Into Play Games</string>
    <string name="action_settings">Settings</string>
    <string name="skip_button">Skip</string>
    <string name="done_button">Done</string>
    <string name="across">Across</string>
    <string name="down">Down</string>
    <string name="anagram_source_lab">Anagram remaining letters:</string>
    <string name="anagram_solution_lab">Anagram solution:</string>
    <string name="board_lab">Board:</string>
    <string name="scratch_lab">Scratch:</string>
    <string name="notes_lab">Notes:</string>
</resources>
